// Vitest Snapshot v1

exports[`<File /> > should render 1`] = `
<Styled(styled.div)>
  <styled.h5>
    <span>
      foo.fa
    </span>
    <styled.div>
      <span />
      <Icon
        color="red"
        faStyle="fas"
        fixedWidth={false}
        name="trash"
        onClick={[Function]}
        style={
          {
            "fontSize": "17px",
            "marginLeft": "9px",
          }
        }
      />
    </styled.div>
  </styled.h5>
  <styled.span>
    Uploaded 
    <RelativeTime
      time="2018-02-14T17:12:00.000000Z"
    />
     by 
    bill
  </styled.span>
</Styled(styled.div)>
`;

exports[`<File /> > should render when [canRemove=false] 1`] = `
<Styled(styled.div)>
  <styled.h5>
    <span>
      foo.fa
    </span>
    <styled.div>
      <span />
    </styled.div>
  </styled.h5>
  <styled.span>
    Uploaded 
    <RelativeTime
      time="2018-02-14T17:12:00.000000Z"
    />
     by 
    bill
  </styled.span>
</Styled(styled.div)>
`;

exports[`<File /> > should render when [ready=false] 1`] = `
<Styled(styled.div)>
  <styled.h5>
    <span>
      foo.fa
    </span>
    <styled.div>
      <Loader
        size="14px"
      />
    </styled.div>
  </styled.h5>
  <styled.span>
    Uploaded 
    <RelativeTime
      time="2018-02-14T17:12:00.000000Z"
    />
     by 
    bill
  </styled.span>
</Styled(styled.div)>
`;

exports[`<File /> > should render when [user=null] 1`] = `
<Styled(styled.div)>
  <styled.h5>
    <span>
      foo.fa
    </span>
    <styled.div>
      <span />
      <Icon
        color="red"
        faStyle="fas"
        fixedWidth={false}
        name="trash"
        onClick={[Function]}
        style={
          {
            "fontSize": "17px",
            "marginLeft": "9px",
          }
        }
      />
    </styled.div>
  </styled.h5>
  <styled.span>
    Retrieved 
    <RelativeTime
      time="2018-02-14T17:12:00.000000Z"
    />
  </styled.span>
</Styled(styled.div)>
`;
